fix: edit spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,12 @@ body {
   color: #fff !important;
   background-color: #111111;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #1B1B1B inset !important;
+    background-color: #1B1B1B;
+    color: #fff;
+}
